# nlp-assignments

./: .gitignore  pyproject.toml
src/nlp_assignments/: __init__.py  compare_errors.py  evaluate.py  prepare_data.py  train_baseline.py  train_bert.py
