[project]
name = "nlp-assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sasakama2", email = "karage350@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "fugashi>=1.5.2",
    "ipadic>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
]

[project.scripts]
nlp-assignments = "nlp_assignments:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
