[project]
name = "nlp-assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sasakama2", email = "karage350@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "fugashi>=1.5.2",
    "ipadic>=1.0.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "protobuf>=6.33.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
    "unidic-lite>=1.0.8",
]

[project.scripts]
nlp-assignments = "nlp_assignments:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.ruff]
line-length = 110 # 1行あたりの最大文字数を指定
target-version = "py312" # 対象のPythonバージョンを指定

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors (PEP 8のコーディング規約をチェック)
    "W", # pycodestyle warnings (PEP 8のコーディング規約をチェック)
    "F", # pyflakes (文法のエラーをチェック)
    "I", # isort (importの順序をチェック)
    "N", # pep8-naming (命名規則をチェック)
    "B", # flake8-bugbear (プログラム内のバグや設計上の問題を検出)
    "UP", # pyupgrade (Pythonの古い構文を新しい構文に自動で変換)
    "SIM", # flake8-simplify (冗長なコードを簡略化)
]
ignore = ["F722"] #
unfixable = [
    "F401", 
    "F841", 
] 
